# stanhf

./: .gitignore  EXAMPLE.md  README.md  pyproject.toml  strip.bash
.github/workflows/: python-app.yml
examples/: example.json  freq.json  freq.py  model.json  normfactor.json  normsys.json  tweak.json
src/: __init__.py  channel.py  config.py  convert.py  modifier.py  run.py  sample.py  stanabc.py  stanhf.py  stanstr.py  tracer.py
src/stanhf/: __init__.py  channel.py  cli.py  config.py  convert.py  extern.hpp  freq.py  metadata.py  modifier.py  par_names.py  pars.py  run.py  sample.py  stanhf.stanfunctions  stanstr.py  tracer.py
src/stanhf/contrib/: bfs.py  freq.py
stanfunctions/: stanhf.stanfunctions
tests/: data_block.stan  functions_block.stan  metadata.stan  pars_block.stan  test_cli.py  test_convert.py  test_freq.py  test_hep_data.py  test_hep_data_patch.py  test_import.py  test_run.py  transformed_data_block.stan  transformed_pars_block.stan
